# fllmingo

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yaml  fllmingo.service  pyproject.toml
app/: __init__.py  config.py  database.py  engine.py  main.py  sanitizer.py
app/static/: app.js  index.html  style.css
