[project]
name = "fllmingo"
version = "1.3.0b1"
description = "FLLMingo — Self-hosted OpenAI-compatible LLM routing proxy with terminal-themed dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
fllmingo = "app.main:run"

[project.urls]
Homepage = "https://github.com/rumotoshino/fllmingo"
Repository = "https://github.com/rumotoshino/fllmingo"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
